--- a/index.html
+++ b/index.html
@@ -9,14 +9,64 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="bg-light">
 
-    
+    <section class="movies mt-3 pl-5">
+        <h1 class="text-center mb-5 text-danger">Movies catalog</h1>
+        <div class="row">
+            <div class="col-md-3 ml-5 mr-4">
+                <form class="movies__form" action="">
+                    <input class="movies__name-input form-control mb-3 py-4" type="text" placeholder="Movie name">
+                    <input class="movies__year-input form-control mb-3 py-4" type="text" placeholder="Movie year">
+                    <select class="movies__genre form__select py-2 rounded mb-3">
+                        <option value="" selected>Genre</option>
+                    </select>
+                    <select class="movies__sort form__select py-2 rounded mb-3">
+                        <option value="" selected>Sort</option>
+                    </select>
+                    <button class="btn btn-primary w-100 py-2">Search</button>
+                </form>
+                <div class="mt-5">
+                    <h2 class="h1">Bookmarked movies</h2>
+                </div>
+            </div>
+            <div class="movies__wrapper col-md-8 ml-5">
+                <h3 class="h2">Search result</h3>
+                <p class="p-3 bg-success rounded h5 mb-0 text-white w-50">You can search for movies through the form on
+                    the left</p>
+                <p class="h4 mt-2">Total movies: <span class="total h3 text-primary"></span></p>
+                <ul class="movies__list mt-4"></ul>
+            </div>
+        </div>
+    </section>
+
+    <template class="movies-template">
+        <li class="movies__item card mb-5" style="width: 30rem;">
+            <img class="movies__img card-img-top rounded" alt="movie picture">
+            <div class="card-body">
+                <h5 class="movies__item-title card-title h3"></h5>
+                <p class="card-text d-flex align-items-center mt-3 mb-3">
+                    <i class="fas fa-calendar fa-2x"></i>
+                    <span class="movies__item-year h4 mb-0 ml-2"></span>
+                </p>
+                <p class="card-text d-flex align-items-center mt-3 mb-4">
+                    <i class="fas fa-star text-warning fa-2x"></i>
+                    <span class="movies__item-rating h4 mb-0 ml-2"></span>
+                </p>
+                <div class="btn-group">
+                    <button class="trailer btn border-primary mr-3 rounded text-primary">Watch
+                        trailer</button>
+                    <button class="info btn border-info mr-3 rounded text-info">More info</button>
+                    <button class="bookmark btn border-success rounded text-success">Bookmark</button>
+                </div>
+            </div>
+        </li>
+    </template>
 
     <script src="https://kit.fontawesome.com/5ecb376021.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/kinolar.js"></script>
+    <script src="js/movies.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
