--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input class="movies__name-input form-control mb-3 py-4" type="text" placeholder="Movie name">
                     <input class="movies__year-input form-control mb-3 py-4" type="text" placeholder="Movie year">
                     <select class="movies__genre form__select py-2 rounded mb-3">
-                        <option value="" selected>Genre</option>
+                        <option value="" selected>All</option>
                     </select>
                     <select class="movies__sort form__select py-2 rounded mb-3">
                         <option value="" selected>Sort</option>
@@ -66,7 +66,7 @@
     <script src="https://kit.fontawesome.com/5ecb376021.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/movies.js"></script>
+    <script src="js/movieOrg.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
