--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     </template>
 
     <template class="bookmark-template">
-        <li class="movies__item card mb-5 d-flex flex-column" style="width: 30rem;">
+        <li class="movies__item card mb-3 d-flex flex-column" style="width: 30rem;">
             <div class="card-body d-flex flex-column">
                 <h5 class="bookmark__item-title card-title h4 mb-auto text-center mb-3"></h5>
-                <button class="remove btn btn-danger w-25 rounded text-white mt-4 ml-auto">Remove</button>
+                <button class="btn btn-danger w-25 rounded text-white mt-4 ml-auto">Remove</button>
             </div>
         </li>
     </template>
