Fix the bugs inside js file remove list item

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     <select class="movies__sort form__select py-2 rounded mb-3">
                         <option value="max" selected>Rating (high to low)</option>
                         <option value="min">Rating (low to high)</option>
+                        <option value="minYear">Year (high to low)</option>
+                        <option value="maxYear">Year (low to high)</option>
+                        <option value="begin">Alphabet (A to Z)</option>
+                        <option value="end">Alphabet (Z to A)</option>
                     </select>
                     <button class="btn btn-primary w-100 py-2">Search</button>
                 </form>
