--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
         </div>
     </section>
 
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <template class="movies-template">
         <li class="movies__item card mb-5 d-flex flex-column" style="width: 30rem;">
             <img class="movies__img card-img-top rounded" src="https://picsum.photos/id/100/200/100"
@@ -66,7 +84,8 @@
                 <div class="btn-group">
                     <a class="trailer btn border-primary mr-3 rounded text-primary" target='_blank'>Watch
                         trailer</a>
-                    <button class="info btn border-info mr-3 rounded text-info">More info</button>
+                    <button class="info btn border-info mr-3 rounded text-info btn btn-white" type="button"
+                        data-bs-toggle="modal" data-bs-target="#exampleModal">More info</button>
                     <button class="bookmark btn border-success rounded text-success">Bookmark</button>
                 </div>
             </div>
@@ -86,6 +105,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/movieOrg.js"></script>
+    <script src="js/normalized.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
