Add local storage function

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <option value="min">Rating (low to high)</option>
                         <option value="minYear">Year (high to low)</option>
                         <option value="maxYear">Year (low to high)</option>
-                        <option value="begin">Alphabet (A to Z)</option>
-                        <option value="end">Alphabet (Z to A)</option>
+                        <option value="begin">A to Z</option>
+                        <option value="end">Z to A</option>
                     </select>
                     <button class="btn btn-primary w-100 py-2">Search</button>
                 </form>
