--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
     </section>
 
+
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -85,7 +86,7 @@
                     <a class="trailer btn border-primary mr-3 rounded text-primary" target='_blank'>Watch
                         trailer</a>
                     <button class="info btn border-info mr-3 rounded text-info btn btn-white" type="button"
-                        data-bs-toggle="modal" data-bs-target="#exampleModal">More info</button>
+                        data-bs-toggle="modal">More info</button>
                     <button class="bookmark btn border-success rounded text-success">Bookmark</button>
                 </div>
             </div>
@@ -103,6 +104,7 @@
 
     <script src="https://kit.fontawesome.com/5ecb376021.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/pagenation.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/movieOrg.js"></script>
     <script src="js/normalized.js"></script>
