Delete stranger features

--- a/index.html
+++ b/index.html
@@ -45,9 +45,17 @@
                     the left</p>
                 <p class="h4 mt-2">Total movies: <span class="total h3 text-primary"></span></p>
                 <ul class="movies__list mt-4"></ul>
+
+                <ul class="pagination buttons-group flex-wrap d-flex justify-content-center" id="list"></ul>
             </div>
         </div>
     </section>
+
+    <template class="buttons-template">
+        <li class='page-item mb-4'>
+            <a class="buttons-link page-link mr-2" href="#">1</a>
+        </li>
+    </template>
 
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
