--- a/index.html
+++ b/index.html
@@ -4,118 +4,199 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Movies</title>
+    <title>Movies.catalog</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="bg-light">
+<body>
 
-    <section class="movies mt-3 pl-5">
-        <h1 class="text-center mb-5 text-danger">Movies catalog</h1>
-        <div class="row">
-            <div class="col-md-3 ml-5 mr-4">
-                <form class="movies__form" action="">
-                    <input class="movies__name-input form-control mb-3 py-4" type="text" placeholder="Movie name">
-                    <input class="movies__rating-input form-control mb-3 py-4" type="text" placeholder="Rating">
-                    <select class="movies__genre form__select py-2 rounded mb-3">
-                        <option value="" selected>All</option>
-                    </select>
-                    <select class="movies__sort form__select py-2 rounded mb-3">
-                        <option value="max" selected>Rating (high to low)</option>
-                        <option value="min">Rating (low to high)</option>
-                        <option value="minYear">Year (high to low)</option>
-                        <option value="maxYear">Year (low to high)</option>
-                        <option value="begin">A to Z</option>
-                        <option value="end">Z to A</option>
-                    </select>
-                    <button class="btn btn-primary w-100 py-2">Search</button>
-                </form>
-                <div class="mt-5">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <h2 class="h1">Bookmarked movies</h2>
-                        <span class="bookmark__counter">0</span>
-                    </div>
-                    <ul class="bookmark-list pl-0 mt-4"></ul>
-                </div>
+    <main>
+
+        <header class="py-3 mb-2 text-center">
+            <div class="container">
+                <h1 class="h3 mb-0">Movies catalog</h1>
             </div>
-            <div class="movies__wrapper col-md-8 ml-5">
-                <h3 class="h2">Search result</h3>
-                <p class="p-3 bg-success rounded h5 mb-0 text-white w-50">You can search for movies through the form on
-                    the left</p>
-                <p class="h4 mt-2">Total movies: <span class="total h3 text-primary"></span></p>
-                <ul class="movies__list mt-4"></ul>
+        </header>
 
-                <ul class="pagination buttons-group flex-wrap d-flex justify-content-center" id="list"></ul>
+        <div class="container-xl">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="container">
+                        <section class="mb-4">
+                            <h2 class="sr-only">Movie search form</h2>
+
+                            <form class="js-search-form" action="https://echo.htmlacademy.ru" method="GET"
+                                autocomplete="off">
+                                <div class="form-group">
+                                    <input class="form-control js-search-form__title-input" type="search" name="title"
+                                        placeholder="Avengers" aria-label="Title">
+                                </div>
+
+                                <div class="form-group">
+                                    <input class="form-control js-search-form__rating-input" type="number" step="any"
+                                        name="min_rating" placeholder="7.5" value="5" aria-label="Minimum rating">
+                                </div>
+
+                                <div class="form-group">
+                                    <select class="form-control js-search-form__genre-select" name="genre"
+                                        aria-label="Genre">
+                                        <option value="All" selected>All</option>
+                                        <option value="Action">Action</option>
+                                        <option value="Adventure">Adventure</option>
+                                        <option value="Animation">Animation</option>
+                                        <option value="Biography">Biography</option>
+                                        <option value="Comedy">Comedy</option>
+                                        <option value="Crime">Crime</option>
+                                        <option value="Documentary">Documentary</option>
+                                        <option value="Drama">Drama</option>
+                                        <option value="Family">Family</option>
+                                        <option value="Fantasy">Fantasy</option>
+                                        <option value="History">History</option>
+                                        <option value="Horror">Horror</option>
+                                        <option value="Music">Music</option>
+                                        <option value="Musical">Musical</option>
+                                        <option value="Mystery">Mystery</option>
+                                        <option value="News">News</option>
+                                        <option value="Reality-TV">Reality-TV</option>
+                                        <option value="Romance">Romance</option>
+                                        <option value="Sci-Fi">Sci-Fi</option>
+                                        <option value="Sport">Sport</option>
+                                        <option value="Thriller">Thriller</option>
+                                        <option value="Uncategorized">Uncategorized</option>
+                                        <option value="War">War</option>
+                                        <option value="Western">Western</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <select class="form-control js-search-form__sort-select" name="sort"
+                                        aria-label="Sorting">
+                                        <option value="rating_desc" selected>Rating (high to low)</option>
+                                        <option value="rating_asc">Rating (low to high)</option>
+                                        <option value="az">A-Z</option>
+                                        <option value="za">Z-A</option>
+                                        <option value="year_desc">Year (new to old)</option>
+                                        <option value="year_asc">Year (old to new)</option>
+                                    </select>
+                                </div>
+
+                                <button class="btn btn-primary btn-block" type="submit">Search</button>
+                            </form>
+                        </section>
+
+                        <section class="mb-4">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h3>Bookmarked movies</h3>
+                                <span class="bookmark-counter">0</span>
+                            </div>
+                            <ul class="bookmarked-movies list-group"></ul>
+                        </section>
+                    </div>
+                </div>
+
+
+                <section class="col-md-8">
+                    <p class="bg-success text-white p-2 rounded w-75 mb-2">You can search for a movie through the form
+                        on the
+                        left.</p>
+                    <h2 class="h5">Search results: <span class="js-search-results-count h4 text-primary">0</span></h2>
+
+                    <div class="d-none alert alert-warning js-no-results-alert">Not found</div>
+
+                    <ul class="search-results row list-unstyled">
+                    </ul>
+
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination flex-wrap justify-content-center"></ul>
+                    </nav>
+                </section>
             </div>
         </div>
-    </section>
 
-    <template class="buttons-template">
-        <li class='page-item mb-4'>
-            <a class="buttons-link page-link mr-2" href="#">1</a>
-        </li>
-    </template>
+    </main>
 
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- MODAL -->
+
+    <section class="movie-info-modal modal fade" id="movie-info-modal" tabindex="-1" aria-labelledby="movie-info-title"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h2 class="movie-info-modal__title h4 modal-title" id="movie-info-title"></h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
-                    ...
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <template class="movies-template">
-        <li class="movies__item card mb-5 d-flex flex-column" style="width: 30rem;">
-            <img class="movies__img card-img-top rounded" src="https://picsum.photos/id/100/200/100"
-                alt="movie picture">
-            <div class="card-body d-flex flex-column">
-                <h5 class="movies__item-title card-title h3 mb-auto"></h5>
-                <p class="card-text d-flex align-items-center mt-3 mb-3">
-                    <i class="fas fa-calendar fa-2x"></i>
-                    <span class="movies__item-year h4 mb-0 ml-2"></span>
-                </p>
-                <p class="card-text d-flex align-items-center mt-3 mb-4">
-                    <i class="fas fa-star text-warning fa-2x"></i>
-                    <span class="movies__item-rating h4 mb-0 ml-2"></span>
-                </p>
-                <div class="btn-group">
-                    <a class="trailer btn border-primary mr-3 rounded text-primary" target='_blank'>Watch
-                        trailer</a>
-                    <button class="info btn border-info mr-3 rounded text-info btn btn-white" type="button"
-                        data-bs-toggle="modal">More info</button>
-                    <button class="bookmark btn border-success rounded text-success">Bookmark</button>
+
+    <!-- TEMPLATES -->
+
+    <!-- Movie card template -->
+    <template id="movie-card-template">
+        <li class="search-results__item movie d-flex flex-column col-sm-6 mb-4">
+            <div class="card flex-grow-1">
+                <img class="movie__poster card-img-top" src="" alt="" width="300" height="200">
+
+                <div class="card-body d-flex flex-column">
+                    <h3 class="movie__title h5 mb-auto"></h3>
+                    <p class="card-text">
+                        <img src="img/calendar.svg" alt="Calendar" width="25" height="25">
+                        <span class="movie__year"></span>
+                    </p>
+
+                    <p class="card-text">
+                        <img src="img/star.svg" alt="Star" width="25" height="25">
+                        <span class="movie__rating"></span>
+                    </p>
+
+                    <p class="card-text d-flex flex-column flex-md-row flex-wrap justify-content-around">
+                        <a class="movie__trailer-link m-1 m-xl-0 btn btn-outline-primary btn-sm" href=""
+                            target="_blank">Watch
+                            trailer</a>
+                        <button class="m-1 m-xl-0 btn btn-outline-info btn-sm js-movie-modal-opener" type="button"
+                            data-toggle="modal" data-target="#movie-info-modal">More info</button>
+                        <button class="m-1 m-xl-0 btn btn-outline-success btn-sm js-movie-bookmark"
+                            type="button">Bookmark</button>
+                    </p>
                 </div>
             </div>
         </li>
     </template>
 
-    <template class="bookmark-template">
-        <li class="movies__item card mb-3 d-flex flex-column" style="width: 30rem;">
-            <div class="card-body d-flex flex-column">
-                <h5 class="bookmark__item-title card-title h4 mb-auto text-center mb-3"></h5>
-                <button class="remove btn btn-danger w-25 rounded text-white mt-4 ml-auto">Remove</button>
-            </div>
+
+    <!-- Bookmarked movie template -->
+    <template id="bookmarked-movie-template">
+        <li class="bookmarked-movie list-group-item">
+            <h3 class="bookmarked-movie__title h6"></h3>
+            <button class="btn btn-sm btn-danger js-remove-bookmarked-movie-button">Remove</button>
         </li>
     </template>
 
-    <script src="https://kit.fontawesome.com/5ecb376021.js" crossorigin="anonymous"></script>
+
+    <!-- Pagination item template -->
+    <template id="pagination-item-template">
+        <li class="page-item">
+            <a class="page-link js-page-link" data-page-number="" href="#"></a>
+        </li>
+    </template>
+
+
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/pagenation.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/movieOrg.js"></script>
-    <script src="js/normalized.js"></script>
+    <!-- <script src="js/utils.js"></script> -->
+    <script src="js/movies-new.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
