--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="bg-light">
 
   <main>
 
@@ -192,7 +192,7 @@
   <!-- <script src="js/utils.js"></script> -->
   <script src="js/movies-new.js"></script>
   <script src="js/utils.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
